--- a/index.html
+++ b/index.html
@@ -6,11 +6,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
     <title>First Assignment</title>
+
 </head>
 
 <body>
-
+    <section class="focused felxible-container">
+        <div class="half-width">
+            <h1>Stay Focused On</h1>
+            <h1 class="tomato-color">Mission 2022</h1>
+            <p>It is been another demanding year for organisations in an environment beset by the pandemic, economic
+                uncertainty
+                and, more latterly, intensifying supply chain issues and disruption. If anything, 2021 has been just as
+                tough as
+                2020 was! Thinking back to this time last year, most of us were looking forward to getting out of 2020
+                and
+                hoping that 2021 would be a more normal year. And it seems likely that 2022 will not be straightforward
+                either.
+            </p>
+            <a class="link-button" target="_blank" href="">EXPLORE NOW</a>
+        </div>
+        <div class="half-width">
+            <img src="images/person/person-5.png" alt="">
+        </div>
+    </section>
+    <section>
+        <h1>My Mission in <span class="tomato-color">2022</h1>
+        <div class="half-width">
+            <h2>Mission</h2>
+            <p>A vision and mission statement is a paragraph that encapsulates everything you would like to be, do, and
+                have in your career. It defines what success and excellence look like to you. It expresses your vision
+                for where you want to be in the future and it reflects your values, goals, and purpose and how you want
+                to operate.</p>
+        </div>
+        <div class="half-width">
+            <h2>Vission</h2>
+            <p>A vision statement describes what you want to achieve in the future.
+                The vision statement answers the question “Where do I want to be?”
+                It defines the optimal desired future state—the mental picture—of what you want to achieve over time,
+                say in five, ten or more years.
+                It inspires you to give your best and shapes your understanding of why you are doing what you do.</p>
+        </div>
+        <div class="half-width">
+            <h2>Goals</h2>
+            <p>Life goals are all the things you want to accomplish in your life. Often your life goals are very
+                meaningful to you and can make a lasting impact on your life. They can be large and challenging goals,
+                or they can be smaller and more personal. It all depends on what you want to achieve.</p>
+        </div>
+    </section>
+    <section class="develop-limits flexible-container">
+        <div class="half-width">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Develop Without Limits</h2>
+            <p>Creating Learning without Limits builds on the first Learning without Limits study by exploring the wider
+                opportunities for enhancing the learning capacity of every child that become possible when a whole staff
+                group works together to create an environment free from the limiting effects of ability labels and
+                practices.</p>
+            <a class="link-button" target="_blank" href="">Read the Documentation</a>
+        </div>
+    </section>
+    <section class="global-community flexible-container">
+        <div class="half-width">
+            <h2>Know Our Global Community</h2>
+            <p>Connecting to the global community fosters education, collaboration, and the birth of mutually-beneficial
+                programs that make an impact. On the micro level, keeping oneself connected to the global community
+                requires a conscious decision.</p>
+            <a class="link-button" target="_blank" href="">Read the Documentation</a>
+        </div>
+        <div class="half-width">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
