--- a/index.html
+++ b/index.html
@@ -82,6 +82,22 @@
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
+    <section class="runtastic flexible-container">
+        <div class="half-width">
+            <h1>Ddidas Training</h1>
+            <h2>Work Out. Bulild Strength. Stay Active & Healthy.</h2>
+            <p>Select muscle groups and create your own workout that fits your schedule. Join challenges: compare your
+                activity to others and push yourself in new ways. Workout anywhere, any time.
+                Start today! Enjoy expert guidance with workout plans for every level in adidas Training.</p>
+        </div>
+        <div class="half-width">
+            <img src="images/Capture.PNG" alt="">
+        </div>
+    </section>
+    <footer class="the-end">
+        <h1>Mission <span class="tomato-color">2022</h1>
+        <p>Continue Work & Perseverance</p>
+    </footer>
 </body>
 
 </html>
