my mission in 2022

--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
                 hoping that 2021 would be a more normal year. And it seems likely that 2022 will not be straightforward
                 either.
             </p>
-            <a class="link-button" target="_blank" href="">EXPLORE NOW</a>
+            <a class="link-button" target="_blank" href="">Explore Now</a>
+            <p>Scroll down to explore more about us</p>
         </div>
         <div class="half-width">
             <img src="images/person/person-5.png" alt="">
         </div>
     </section>
-    <section>
-        <h1>My Mission in <span class="tomato-color">2022</h1>
+    <h1>My Mission in <span class="tomato-color">2022</h1>
+    <section class="mission-vission flexible-container">
         <div class="half-width">
             <h2>Mission</h2>
             <p>A vision and mission statement is a paragraph that encapsulates everything you would like to be, do, and
@@ -95,7 +96,7 @@
         </div>
     </section>
     <footer class="the-end">
-        <h1>Mission <span class="tomato-color">2022</h1>
+        <h1>Mission <span class="white-color">2022</h1>
         <p>Continue Work & Perseverance</p>
     </footer>
 </body>
