text background added

--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
             <img src="images/person/person-5.png" alt="">
         </div>
     </section>
-    <h1>My Mission in <span class="tomato-color">2022</h1>
+    <h1 class="my-mission">My Mission in <span class="tomato-color">2022</h1>
     <section class="mission-vission flexible-container">
-        <div class="half-width">
+        <div class="half-width light-background">
+            <img src="images/illustrators/illustrator-1.png" alt="">
             <h2>Mission</h2>
             <p>A vision and mission statement is a paragraph that encapsulates everything you would like to be, do, and
                 have in your career. It defines what success and excellence look like to you. It expresses your vision
                 for where you want to be in the future and it reflects your values, goals, and purpose and how you want
                 to operate.</p>
         </div>
-        <div class="half-width">
+        <div class="half-width tomato-background">
+            <img src="images/illustrators/illustrator-2.png" alt="">
             <h2>Vission</h2>
             <p>A vision statement describes what you want to achieve in the future.
                 The vision statement answers the question “Where do I want to be?”
@@ -51,7 +53,8 @@
                 say in five, ten or more years.
                 It inspires you to give your best and shapes your understanding of why you are doing what you do.</p>
         </div>
-        <div class="half-width">
+        <div class="half-width green-background">
+            <img src="images/illustrators/illustrator-3.png" alt="">
             <h2>Goals</h2>
             <p>Life goals are all the things you want to accomplish in your life. Often your life goals are very
                 meaningful to you and can make a lasting impact on your life. They can be large and challenging goals,
