adidas training added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
     <section class="runtastic flexible-container">
         <div class="half-width">
-            <h1 class="my-mission">Adidas <span class="tomato-color">Traing</h1>
+            <h1 class="my-mission">Adidas <span class="tomato-color">Training</h1>
             <h2>Work Out. Bulild Strength. Stay Active & Healthy.</h2>
             <p>Select muscle groups and create your own workout that fits your schedule. Join challenges: compare your
                 activity to others and push yourself in new ways. Workout anywhere, any time.
